<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_description">Background Image</string>
    <string name="app_logo">App Logo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="welcome_msg">Find a team in your city and dominate the league.</string>
    <string name="get_started">GET STARTED</string>
    <string name="desired_league">Desired League</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
</resources>
